--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,7 +7,7 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <!-- Google Font - Lato -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
@@ -19,16 +19,46 @@
 
   <body>
     <!--Header (flower shop logo block element)-->
-    <!--Banner Jumbotron of the image-->
+    <div class="container-fluid">
+      <img class="img" src="../Exercise_B/assets/images/logo.png" alt="Navbaricon">
+    </div>
 
+    <!--Banner Jumbotron of the image-->
+    
+        <div class="banner">
+          <div class="container-fluid text-center">
+            <img class="banner" src="../Exercise_B/assets/images/flowershop.jpg" alt="banner">
+            <h1 class ="heading text light">Beautiful Flowers</h1>
+          <button type ="submit" class="btn btn-success" id="learn-more">Learn more
+          </button>
+          </div>
+          
     <!--Four containers with img / text-->
     <!-- 4 containers -->
-
+    <div id="bottom" class="d-flex flex-wrap row text-center px-5">
+      <div class="col-6 d-flex align-items-center justify-content-center px-5 py-3">
+        <img class="h-50" src="../Exercise_B/assets/images/flower-icon.png" atl="Flowers">
+          <p class="card-text p-3">Flowers for every kind of situation</p>
+      </div>
     <!-- Payments Div -->
+    <div class="col-6 d-flex align-items-center justify-content-center px-5 py-3">
+      <img class="h-50" src="../Exercise_B/assets/images/payment-icon.png" alt="Payment">
+        <p class="card-text p-3">All kinds of payments accepted</p>
+    </div>
     <!-- Consultation Div -->
-
+    <div class="col-6 d-flex align-items-center justify-content-center px-5 py-3">
+        <img class="h-50" src="../Exercise_B/assets/images/phone-icon.png" alt="phone">
+          <p class="card-text p-3">Free consultation</p>
+      </div>
     <!-- Delivery Div -->
-
+    <div class="col-6 d-flex align-items-center justify-content-center px-5 py-3">
+        <img class="h-50" src="../Exercise_B/assets/images/truck-icon.png" alt="truck">
+          <p class="card-text p-3">City wide Delivery</p>
+      </div>
     <!--Scripts required for bootstrap CDN-->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
+  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
+  
   </body>
 </html>
