--- a/Exercise_A/index.html
+++ b/Exercise_A/index.html
@@ -10,8 +10,40 @@
       name="viewport"
       content="width=device-width, initial-scale=1"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   </head>
   <body>
     <!-- CODE HERE -->
+    <nav class="navbar navbar-expand">
+    <div class = "container-fluid">
+      <a class = "navbar-brand" href="#">
+        <img src="../Exercise_A/assets/bootstrap.png" alt = "B" width="30" height="30">
+      </a>
+      <button class="navbar-toggler" type=""button">
+      <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Home</a> 
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a> 
+      </ul>
+    </div>
+    </div>
+  </nav>  
+  <ul class="list-group">
+  <li class="list-group-item">Item I</li>
+  <li class="list-group-item">Item II</li>
+  <li class="list-group-item">Item III</li>
+  <li class="list-group-item">Item IV</li>
+  <li class="list-group-item">Item V</li>
+</ul>
+<button class="btn btn-primary">Primary</button>
+<button class="btn btn-secondary">Secondary</button>
+<button class="btn btn-success">Success</button>
+<button class="btn btn-danger">Danger</button>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
   </body>
 </html>
