--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,7 +7,7 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">    
     <!-- Google Font - Lato -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
@@ -19,16 +19,32 @@
 
   <body>
     <!--Header (flower shop logo block element)-->
+    <nav>
+      <img src="./assets/images/logo.png">
+      </nav>
     <!--Banner Jumbotron of the image-->
-
+    <div class="container-fluid">
+      <div class="row">
+        <div class="banner-image">
+        <span class="centered text_centered">Beautiful Flower</span>
+        <div class="button_centered">Learn more</div>
+      </div>
+    </div>
     <!--Four containers with img / text-->
     <!-- 4 containers -->
-
+    <div class="row icons">
+      <div class="col-lg-3 col-md-6 col-sm-12 icon-text"><img src="./assets/images/flower-icon.png"><p>Flowers for every kind of situation</p>
+      </div>
     <!-- Payments Div -->
+    <div class="col-lg-3 col-md-6 col-sm-12 icon-text"><img src="./assets/images/payment-icon.png"><p>All major payments kinds accepted</p></div>
     <!-- Consultation Div -->
-
+    <div class="col-lg-3 col-md-6 col-sm-12 icon-text"><img src="./assets/images/phone-icon.png"><p>Free consulation</p></div>
     <!-- Delivery Div -->
-
+    <div class="col-lg-3 col-md-6 col-sm-12 icon-text"><img src="./assets/images/truck-icon.png"><p>City wide delivery</p></div>
+    </div>
     <!--Scripts required for bootstrap CDN-->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
+  
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
   </body>
 </html>
