--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -20,7 +20,7 @@
   <body>
     <!--Header (flower shop logo block element)-->
     <nav>
-      <img src="./assets/images/logo.png">
+      <img src="./logo.png">
       </nav>
     <!--Banner Jumbotron of the image-->
     <div class="container-fluid">
@@ -33,14 +33,14 @@
     <!--Four containers with img / text-->
     <!-- 4 containers -->
     <div class="row icons">
-      <div class="col-lg-3 col-md-6 col-sm-12 icon-text"><img src="./assets/images/flower-icon.png"><p>Flowers for every kind of situation</p>
+      <div class="col-lg-3 col-md-6 col-sm-12 icon-text"><img src="./flower-icon.png"><p>Flowers for every kind of situation</p>
       </div>
     <!-- Payments Div -->
-    <div class="col-lg-3 col-md-6 col-sm-12 icon-text"><img src="./assets/images/payment-icon.png"><p>All major payments kinds accepted</p></div>
+    <div class="col-lg-3 col-md-6 col-sm-12 icon-text"><img src="./payment-icon.png"><p>All major payments kinds accepted</p></div>
     <!-- Consultation Div -->
-    <div class="col-lg-3 col-md-6 col-sm-12 icon-text"><img src="./assets/images/phone-icon.png"><p>Free consulation</p></div>
+    <div class="col-lg-3 col-md-6 col-sm-12 icon-text"><img src="./phone-icon.png"><p>Free consulation</p></div>
     <!-- Delivery Div -->
-    <div class="col-lg-3 col-md-6 col-sm-12 icon-text"><img src="./assets/images/truck-icon.png"><p>City wide delivery</p></div>
+    <div class="col-lg-3 col-md-6 col-sm-12 icon-text"><img src="./truck-icon.png"><p>City wide delivery</p></div>
     </div>
     <!--Scripts required for bootstrap CDN-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
