--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -1,34 +1,67 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Flower Shop BS</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
-    <!-- Link and CDN required for bootstrap -->
+<head>
+  <meta charset="utf-8" />
+  <title>Flower Shop BS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
-    <!-- Google Font - Lato -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato"
-      rel="stylesheet"
-    />
-    <!-- Custom Stylesheet -->
-    <link rel="stylesheet" href="./assets/style/stylesheet.css" />
-  </head>
+  <!-- Link and CDN required for bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- Google Font - Lato -->
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
+  <!-- Custom Stylesheet -->
+  <link rel="stylesheet" href="./assets/style/stylesheet.css" />
 
-  <body>
-    <!--Header (flower shop logo block element)-->
-    <!--Banner Jumbotron of the image-->
+</head>
 
-    <!--Four containers with img / text-->
-    <!-- 4 containers -->
+<body>
+  <!--Header (flower shop logo block element)-->
+  <header>
+    <div><img src="./assets/images/logo.png" alt="logo"></div>
+  </header>
+  <!--Banner Jumbotron of the image-->
+  <div class="jumbotron jumbotron-fluid banner">
+    <img src="assets/images/flowershop.jpg" style="width:100%; box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.362)"
+      alt="flowerBanner">
+    <div class="container-fluid headline">
+      <h1 class="my-4 display-5">Beautiful Flower</h1>
+      <button type="button" class="btn btn-success btn-lg">Learn More</button>
+    </div>
+  </div>
 
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
 
-    <!-- Delivery Div -->
+  <footer>
+    <div class="container-fluid">
+      <div class="row row-cols-sm-1 row-cols-lg-4 row-cols-md-2 row-cols-1">
+        <div class="col"><img src="./assets/images/flower-icon.png" alt="flower-icon">
+          <p>Flower for every kind of situation</p>
+        </div>
+        <!-- Flower Div -->
+        <div class="col"><img src="./assets/images/payment-icon.png" class="align-self-center" alt="payment-icon">
+          <p>All Major Paymenmts kinds accepted</p>
+        </div>
+        <!-- Payment Div -->
 
-    <!--Scripts required for bootstrap CDN-->
-  </body>
+        <div class="col"><img src="./assets/images/phone-icon.png" class="align-self-center" alt="">
+          <p>Free Consultation</p>
+        </div> <!-- Consultation Div -->
+
+        <div class="col"><img src="./assets/images/truck-icon.png" alt="truck-icon" class="align-self-center">
+          <p>City Wide Delivery</p>
+        </div> <!-- Truck Div -->
+
+      </div>
+    </div>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <!--Scripts required for bootstrap CDN-->
+
+</body>
+
 </html>
