--- a/Exercise_A/index.html
+++ b/Exercise_A/index.html
@@ -1,17 +1,43 @@
 <!-- Do not forget to add in the Bootstrap CDN's so that you can utilise the pre-constructed HTML elements -->
 <!DOCTYPE html>
-<html class="no-js">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
-    <meta name="description" content="" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1"
-    />
-  </head>
-  <body>
-    <!-- CODE HERE -->
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <title>Document</title>
+</head>
+<body>
+    <ul class="nav navbar-expand-lg bg-light">
+        <a class="navbar-brand p-1" href="#">
+            <img src="assets/bootstrap.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
+          </a>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+    </ul>
+
+    <ul class="list-group">
+        <li class="list-group-item">Item I</li>
+        <li class="list-group-item">Item II</li>
+        <li class="list-group-item">Item III</li>
+        <li class="list-group-item">Item IV</li>
+        <li class="list-group-item">Item V</li>
+    </ul>
+
+    <div class="buttonGroup">
+        <button type="button" class="btn btn-primary">Click Here</button>
+        <button type="button" class="btn btn-warning">Click Here</button>
+        <button type="button" class="btn btn-danger">Click Here</button>
+        <button type="button" class="btn btn-success">Click Here</button>
+        <button type="button" class="btn btn-outline-danger">Click Here</button>
+    </div>
+        <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+</body>
 </html>
