--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,7 +7,13 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
-
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
     <!-- Google Font - Lato -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
@@ -19,16 +25,67 @@
 
   <body>
     <!--Header (flower shop logo block element)-->
+    <header class="border-5 border-bottom border-secondary">
+      <nav class="navbar">
+        <div class="container">
+          <a class="navbar-brand" href="index.html">
+            <img
+              src="/FTWD_Web_Day_03/Exercise_B/assets/images/logo.png"
+              alt="logo"
+            />
+          </a>
+        </div>
+      </nav>
+    </header>
     <!--Banner Jumbotron of the image-->
+    <section class="text-white">
+      <div class="container text-center" id="jumbotron">
+        <h1>Beautiful Flowers</h1>
+      </div>
+      <div class="container text-center" id="jumbotron">
+        <button class="btn">Learn more</button>
+      </div>
+    </section>
 
-    <!--Four containers with img / text-->
-    <!-- 4 containers -->
-
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
-
-    <!-- Delivery Div -->
-
-    <!--Scripts required for bootstrap CDN-->
+    <footer class="container-fluid text-center">
+      <!--Four containers with img / text-->
+      <!-- 4 containers -->
+      <div class="row align-items-center">
+        <div class="col-sm-12 col-md-6 col-xl-3 d-flex align-items-center  justify-content-center">
+          <img
+            src="/FTWD_Web_Day_03/Exercise_B/assets/images/flower-icon.png"
+            alt="flower icon"
+          />
+          <p>Flowers for every kind of situation</p>
+        </div>
+        <div class="col-sm-12 col-md-6 col-xl-3 d-flex align-items-center justify-content-center">
+          <img
+            src="/FTWD_Web_Day_03/Exercise_B/assets/images/payment-icon.png"
+            alt="flower icon"
+          />
+          <p>All major payments kinds accepted</p>
+        </div>
+        <div class="col-sm-12 col-md-6 col-xl-3 d-flex align-items-center  justify-content-center">
+          <img
+            src="/FTWD_Web_Day_03/Exercise_B/assets/images/phone-icon.png"
+            alt="flower icon"
+          />
+          <p>Free Consultation</p>
+        </div>
+        <div class="col-sm-12 col-md-6 col-xl-3 d-flex align-items-center  justify-content-center">
+          <img
+            src="/FTWD_Web_Day_03/Exercise_B/assets/images/truck-icon.png"
+            alt="flower icon"
+          />
+          <p>City wide delivery</p>
+        </div>
+      </div>
+    </footer>
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
