--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,7 +7,7 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <!-- Google Font - Lato -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
@@ -19,16 +19,48 @@
 
   <body>
     <!--Header (flower shop logo block element)-->
+    <nav class="navbar bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="assets/images/logo.png" alt="Bootstrap">
+        </a>
+      </div>
+    </nav>
     <!--Banner Jumbotron of the image-->
-
+    <div class="container-fluid d-flex align-items-center flex-column banner">
+      <h1 class="text-light text-center">Beautiful Flower</h1>
+      <button type="button" class="btn btnLearnMore">Learn more</button>
+    </div>
     <!--Four containers with img / text-->
     <!-- 4 containers -->
-
+    <div class="feature p-5">
+      <div class="container">
+        <div class="row row-cols-1 row-cols-xl-2">
+          <div class="col d-flex align-items-center my-3">
+            <img src="assets/images/flower-icon.png" alt="Bootstrap" width="120" height="120" class="me-3">
+            <h3 class="text-center mx-auto">Flowers for every kind of situation</h3>
+          </div>
+          <div class="col d-flex align-items-center  my-3">
+            <img src="assets/images/payment-icon.png" alt="Bootstrap" width="120" height="120" class="me-3">
+            <h3 class="text-center mx-auto">All major payments kinds accepted</h3>
+          </div>
+          <div class="col d-flex align-items-center my-3">
+            <img src="assets/images/phone-icon.png" alt="Bootstrap" width="120" height="120" class="me-3">
+            <h3 class="text-center mx-auto">Free consulation</h3>
+          </div>
+          <div class="col d-flex align-items-center my-3">
+            <img src="assets/images/truck-icon.png" alt="Bootstrap" width="120" height="120" class="me-3">
+            <h3 class="text-center mx-auto">City wide delivery</h3>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Payments Div -->
     <!-- Consultation Div -->
 
     <!-- Delivery Div -->
 
     <!--Scripts required for bootstrap CDN-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
   </body>
 </html>
