--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -8,6 +8,12 @@
 
     <!-- Link and CDN required for bootstrap -->
 
+    <link rel="stylesheet" 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
+    crossorigin="anonymous">
+
+
     <!-- Google Font - Lato -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
@@ -19,10 +25,76 @@
 
   <body>
     <!--Header (flower shop logo block element)-->
+    <!-- <div class="d-flex flex-row bd-highlight mb-2">
+
+
+    </div> -->
+    <nav class="navbar navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="./assets/images/logo.png" alt="" width="200" height="50">
+        </a>
+      </div>
+    </nav>
+ 
+
+
+    
+    <div class="Beautiful">
+      <header>Beautiful Flowers</header>
+      <br />
+      <h1 class="Learn">Learn more</h1>
+    </div>
+
+
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+
+
+
+
+  <div class="carousel-item active">
+      <img src="./assets/images/flowershop.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="./assets/images/flowershop2.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="./assets/images/flowershop.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+
+
+
+
     <!--Banner Jumbotron of the image-->
 
     <!--Four containers with img / text-->
+    <div class="lowerGreen" style="background-color: #b9cf88; height: 400px">
+      <br />
+      <br />
+      <br />
+
     <!-- 4 containers -->
+
+    <ul class="flex-container">
+      <li class="flex-item"><image src="./assets/images/flower-icon.png" width="30px"/>Flowers for every kind of situation</li>
+      <li class="flex-item"><image src="./assets/images/payment-icon.png" width="30px"/>All major payments minds accepted</li>
+      <li class="flex-item"><img src="./assets/images/phone-icon.png" width="30px" />Free consultation</li>
+      <li class="flex-item"><img src="./assets/images/truck-icon.png" width="30px" />City wide delivery</li>
+    </ul>
+
+  </div>  
 
     <!-- Payments Div -->
     <!-- Consultation Div -->
@@ -30,5 +102,14 @@
     <!-- Delivery Div -->
 
     <!--Scripts required for bootstrap CDN-->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+  
+  
+  </body>
+</html>
+
   </body>
 </html>
