--- a/Exercise_A/index.html
+++ b/Exercise_A/index.html
@@ -4,14 +4,57 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Index - Exercise A</title>
     <meta name="description" content="" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
     />
   </head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <body>
     <!-- CODE HERE -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container fluid">
+      <a class="navbar-brand" href="#">
+      <img src="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24"></a>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    </nav>
+    <div class="container fluid">
+      <ul class="list-group">
+        <li class="list-group-item">Item I</li>
+        <li class="list-group-item">Item II</li>
+        <li class="list-group-item">Item III</li>
+        <li class="list-group-item">Item IV</li>
+        <li class="list-group-item">Item V</li>
+      </ul>
+    </div>
+    <div class="container fluid">
+      <button type="button" class="btn btn-primary">Primary</button>
+      <button type="button" class="btn btn-secondary">Secondary</button>
+      <button type="button" class="btn btn-success">Success</button>
+      <button type="button" class="btn btn-danger">Danger</button>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
+  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
   </body>
 </html>
+
+
+<!--
+- [ ] Exercise A: Create a bootstrap page, place a bootstrap navigation bar, bootstrap list group and bootstrap buttons onto the page to mirror this image:
+
+  ![Bootstrap Image](assets/bootstrapDemo.png)
+-->
