everything completed except Ecercise B

--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -1,34 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Flower Shop BS</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
-    <!-- Link and CDN required for bootstrap -->
+<head>
+  <meta charset="utf-8" />
+  <title>Flower Shop BS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
-    <!-- Google Font - Lato -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato"
-      rel="stylesheet"
-    />
-    <!-- Custom Stylesheet -->
-    <link rel="stylesheet" href="./assets/style/stylesheet.css" />
-  </head>
+  <!-- Link and CDN required for bootstrap -->
 
-  <body>
-    <!--Header (flower shop logo block element)-->
-    <!--Banner Jumbotron of the image-->
+  <!-- Google Font - Lato -->
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
+  <!-- Custom Stylesheet -->
+  <link rel="stylesheet" href="./assets/style/stylesheet.css" />
+</head>
 
-    <!--Four containers with img / text-->
-    <!-- 4 containers -->
+<body>
+  <!--Header (flower shop logo block element)-->
+  <!--Banner Jumbotron of the image-->
 
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
+  <!--Four containers with img / text-->
+  <!-- 4 containers -->
 
-    <!-- Delivery Div -->
+  <!-- Payments Div -->
+  <!-- Consultation Div -->
 
-    <!--Scripts required for bootstrap CDN-->
-  </body>
+  <!-- Delivery Div -->
+
+  <!--Scripts required for bootstrap CDN-->
+</body>
+
 </html>
