--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -19,7 +19,9 @@
 
   <body>
     <!--Header (flower shop logo block element)-->
+    <img src="./assets/images/logo.png" alt="logo" />
     <!--Banner Jumbotron of the image-->
+    
 
     <!--Four containers with img / text-->
     <!-- 4 containers -->
