--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -21,10 +21,35 @@
     <!--Header (flower shop logo block element)-->
     <img src="./assets/images/logo.png" alt="logo" />
     <!--Banner Jumbotron of the image-->
-    
+    <div class="hero">
+      <div class="container">
+        <h2 class="text_1">Beautiful Flowers</h2>
+        <button class="simple_button" type="button">Learn more</button>
+        </div>
 
+      </div>
+    </div>
     <!--Four containers with img / text-->
     <!-- 4 containers -->
+    <div class="grid-even-columns">
+      <div class="flow">
+        <img class="flower-icon" src="./assets/images/flower-icon.png">
+        <p style="font-size: 25px">Flowers for every kind of situation</p>
+      </div>
+      <div class="flow">
+        <img class="phone-icon" src="./assets/images/phone-icon.png">
+        <p style="font-size: 25px">Free consultation</p>
+      </div>
+      <div class="flow">
+        <img class="payment-icon" src="./assets/images/payment-icon.png">
+        <p style="font-size: 25px">All major payments kinds accepted</p>
+      </div>
+      <div class="flow">
+        <img class="truck-icon" src="./assets/images/truck-icon.png">
+        <p style="font-size: 25px">City wide delivery</p>
+      </div>
+    </div>
+    
 
     <!-- Payments Div -->
     <!-- Consultation Div -->
