--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -5,9 +5,9 @@
     <title>Flower Shop BS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
-
     <!-- Link and CDN required for bootstrap -->
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Google Font - Lato -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
@@ -25,37 +25,29 @@
       <div class="container">
         <h2 class="text_1">Beautiful Flowers</h2>
         <button class="simple_button" type="button">Learn more</button>
-        </div>
-
       </div>
     </div>
     <!--Four containers with img / text-->
     <!-- 4 containers -->
-    <div class="grid-even-columns">
-      <div class="flow">
-        <img class="flower-icon" src="./assets/images/flower-icon.png">
-        <p style="font-size: 25px">Flowers for every kind of situation</p>
+    <div class="row">
+      <div class="col-sm-3 col-md-6 col-xxl-3" class="flower-icon-container">
+          <img class="flower-icon" src="./assets/images/flower-icon.png">Flowers for every kind of situation
       </div>
-      <div class="flow">
-        <img class="phone-icon" src="./assets/images/phone-icon.png">
-        <p style="font-size: 25px">Free consultation</p>
+    <!-- Phone Div -->
+      <div class="col-sm-3 col-md-6 col-xxl-3" class="phone-icon-container">
+        <img class="phone-icon" src="./assets/images/phone-icon.png">Free consultation
       </div>
-      <div class="flow">
-        <img class="payment-icon" src="./assets/images/payment-icon.png">
-        <p style="font-size: 25px">All major payments kinds accepted</p>
-      </div>
-      <div class="flow">
-        <img class="truck-icon" src="./assets/images/truck-icon.png">
-        <p style="font-size: 25px">City wide delivery</p>
-      </div>
-    </div>
-    
-
     <!-- Payments Div -->
-    <!-- Consultation Div -->
+      <div class="col-sm-3 col-md-6 col-xxl-3" class="payment-icon-container">
+         <img class="payment-icon" src="./assets/images/payment-icon.png">All major payments kinds accepted 
+       </div>
+    <!-- Delivery Div -->  
+       <div class="col-sm-3 col-md-6 col-xxl-3" class="deliver-icon-container">
+         <img class="truck-icon" src="./assets/images/truck-icon.png">City wide delivery
+       </div>
+     </div>
 
-    <!-- Delivery Div -->
-
+    </div>
     <!--Scripts required for bootstrap CDN-->
   </body>
 </html>
