--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -8,6 +8,10 @@
   <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
   <!-- Link and CDN required for bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <link rel="stylesheet" href="./style.css">
+
 
   <!-- Google Font - Lato -->
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
@@ -17,9 +21,52 @@
 
 <body>
   <!--Header (flower shop logo block element)-->
+  <header>
+    <nav class="navbar bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="./assets/images/logo.png" alt="Bootstrap">
+        </a>
+      </div>
+    </nav>
+  </header>
+
   <!--Banner Jumbotron of the image-->
+  <section id="banner">
+    <div class="banner-container">
+      <div class="inner-content">
+        <h1>Beautiful Flowers</h1>
+        <button>Learn More</button>
+      </div>
+    </div>
+  </section>
 
   <!--Four containers with img / text-->
+  <section id="service-grid">
+    <div class="container">
+      <div class="service-items">
+        <img src="./assets/images/flower-icon.png" alt="">
+        <p>Flowers for every kind of situation</p>
+      </div>
+
+      <div class="service-items">
+        <img src="./assets/images/payment-icon.png" alt="">
+        <p>All major payments kinds accepted</p>
+      </div>
+
+      <div class="service-items">
+        <img src="./assets/images/phone-icon.png" alt="">
+        <p>Free consultation</p>
+      </div>
+
+      <div class="service-items">
+        <img src="./assets/images/truck-icon.png" alt="">
+        <p>City wide delivery</p>
+      </div>
+    </div>
+
+  </section>
+
   <!-- 4 containers -->
 
   <!-- Payments Div -->
@@ -28,6 +75,10 @@
   <!-- Delivery Div -->
 
   <!--Scripts required for bootstrap CDN-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+
 </body>
 
 </html>
