--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -1,34 +1,60 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Flower Shop BS</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
+<html class="no-js">
 
-    <!-- Link and CDN required for bootstrap -->
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title></title>
+  <meta name="description" content="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="./style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <title>Flowershop homepage</title>
+</head>
 
-    <!-- Google Font - Lato -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato"
-      rel="stylesheet"
-    />
-    <!-- Custom Stylesheet -->
-    <link rel="stylesheet" href="./assets/style/stylesheet.css" />
-  </head>
+<body>
+  <!-- CODE HERE -->
+  <div class="main-section">
 
-  <body>
-    <!--Header (flower shop logo block element)-->
-    <!--Banner Jumbotron of the image-->
+    <div class="header">
+      <img src="./assets/images/logo.png" alt="flowershop logo">
+    </div>
 
-    <!--Four containers with img / text-->
-    <!-- 4 containers -->
+    <div class="image d-flex flex-column justify-content-center align-items-center">
+      <p class="fs-1 fw-semibold">Beautiful Flowers</p>
+      <button class="btn m-3" id="btn">Learn more</button>
+    </div>
 
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
+    <div class="services">
+      <div class="row ">
+        <div class="service-item col d-flex p-4 align-items-center justify-content-center">
+          <img src="./assets/images/flower-icon.png" alt="image of a flower" class="me-3">
+          <div>Flowers for every kind of situation</div>
+        </div>
+        <div class="service-item col d-flex p-4 align-items-center justify-content-center">
+          <img src="./assets/images/payment-icon.png" alt="image of payment transaction" class="me-3">
+          <div>All major payments kinds accepted</div>
+        </div>
+        <div class="service-item col d-flex p-4 align-items-center justify-content-center">
+          <img src="./assets/images/phone-icon.png" alt="image of a phone" class="me-3">
+          <div>Free consultation</div>
+        </div>
+        <div class="service-item col d-flex p-4 align-items-center justify-content-center">
+          <img src="./assets/images/truck-icon.png" alt="image of a truck" class="me-3">
+          <div>City wide delivery</div>
+        </div>
+      </div>
+    </div>
 
-    <!-- Delivery Div -->
+  </div>
 
-    <!--Scripts required for bootstrap CDN-->
-  </body>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    crossorigin="anonymous"></script>
+
+  <script src="" async defer></script>
+</body>
+
 </html>
