--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -25,49 +25,71 @@
   </head>
 
   <body>
+    <!-- NAVBAR -->
     <header>
-      <img src="/Exercise_B/assets/images/logo.png" alt="logo" class="logo" />
+      <div class="container-fluid">
+        <nav class="navbar navbar-expand-md navbar-top">
+          <img
+            cl
+            src="/Exercise_B/assets/images/logo.png"
+            alt="logo"
+            class="logo navbar-brand"
+          />
+        </nav>
+      </div>
     </header>
+
     <main>
-      <section class="section-intro">
-        <div class="intro-content">
-          <h1>Beautiful Flowers</h1>
-          <a href=""><button>Learn more</button></a>
+      <!-- BANNER -->
+      <section class="section-banner">
+        <div
+          class="color-overlay d-flex flex-column justify-content-center align-items-center text-white"
+        >
+          <h1 class="fs-1 fw-bolder">Beautiful Flowers</h1>
+          <a
+            href="#"
+            class="custom-color btn rounded-pill fw-bold text-white fs-3 btn-lg mt-3 d-block"
+            >Learn more</a
+          >
         </div>
       </section>
-      <section class="section-services">
-        <div class="service-container row">
-          <div class="service col-sm-6 col-xl col-md-6">
-            <img
-              src="/Exercise_B/assets/images/flower-icon.png"
-              alt="flower icon"
-              class="icon"
-            />
-            <p>Flowers for every kind of situation</p>
-          </div>
-          <div class="service col-sm-6 col-xl col-md-6">
-            <img
-              src="/Exercise_B/assets/images/payment-icon.png"
-              alt="payment icon"
-              class="icon"
-            />
-            <p>All mayor payments kinds accepter</p>
-          </div>
-          <div class="service col-sm-6 col-xl col-md-6">
-            <img
-              src="/Exercise_B/assets/images/phone-icon.png"
-              alt="phone icon"
-              class="icon"
-            />
-            <p>Free consultation</p>
-          </div>
-          <div class="service col-sm-6 col-xl col-md-6">
-            <img
-              src="/Exercise_B/assets/images/truck-icon.png"
-              alt="truck icon"
-              class="icon"
-            />
-            <p>City wide delivery</p>
+
+      <!-- SERVICES -->
+      <section class="section-services custom-color-light">
+        <div class="container">
+          <div class="row py-5 justify-content-center align-items-center">
+            <div class="col-sm-6 col-md-3 text-center">
+              <img
+                src="/Exercise_B/assets/images/flower-icon.png"
+                alt="flower icon"
+                class="icon pb-3"
+              />
+              <p>Flowers for every kind of situation</p>
+            </div>
+            <div class="col-sm-6 col-md-3 text-center">
+              <img
+                src="/Exercise_B/assets/images/payment-icon.png"
+                alt="payment icon"
+                class="icon pb-3"
+              />
+              <p>All mayor payments kinds accepter</p>
+            </div>
+            <div class="col-sm-6 col-md-3 text-center">
+              <img
+                src="/Exercise_B/assets/images/phone-icon.png"
+                alt="phone icon"
+                class="icon pb-3"
+              />
+              <p>Free consultation</p>
+            </div>
+            <div class="col-sm-6 col-md-3 text-center">
+              <img
+                src="/Exercise_B/assets/images/truck-icon.png"
+                alt="truck icon"
+                class="icon pb-3"
+              />
+              <p>City wide delivery</p>
+            </div>
           </div>
         </div>
       </section>
