--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -28,7 +28,7 @@
     <!-- NAVBAR -->
     <header>
       <div class="container-fluid">
-        <nav class="navbar navbar-expand-md navbar-top">
+        <nav class="navbar navbar-expand-md navbar-top py-3">
           <img
             cl
             src="/Exercise_B/assets/images/logo.png"
