--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -19,16 +19,44 @@
 
   <body>
     <!--Header (flower shop logo block element)-->
+    <nav>
+      <img src="./assets/images/logo.png"/>
+    </nav>
     <!--Banner Jumbotron of the image-->
-
+    <div class="hero">
+      <div class="hero__content">
+        <h1>Beautiful Flowers</h1>
+        <button>Learn More</button>
+      </div>
+    </div>
     <!--Four containers with img / text-->
-    <!-- 4 containers -->
+    <div class="details container-fluid   ">
+      <div class="details__container">
+        <img src="./assets/images/flower-icon.png"/>
+        <p>Flowers for every kind of situation</p>
+      </div>
 
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
+      <div class="details__container">
+        <img src="./assets/images/payment-icon.png"/>
+        <p>All major payments kinds accepted</p>
+      </div>
 
-    <!-- Delivery Div -->
+      <div class="details__container">
+        <img src="./assets/images/phone-icon.png"/>
+        <p>Free consulation</p>
+      </div>
+
+      <div class="details__container">
+        <img src="./assets/images/truck-icon.png"/>
+        <p>City wide delivery</p>
+      </div>
+    </div>
 
     <!--Scripts required for bootstrap CDN-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
+  
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
   </body>
 </html>
