--- a/Exercise_A/index.html
+++ b/Exercise_A/index.html
@@ -10,8 +10,41 @@
       name="viewport"
       content="width=device-width, initial-scale=1"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
+  
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
+
   </head>
   <body>
-    <!-- CODE HERE -->
+    <nav class="navbar ">
+      
+      <ul class="navbar-nav d-flex flex-row gap-3 
+      justify-content-evenly align-items-center ">
+        <a class=" " href="#">
+          <img style="height: 50px;" src="./assets/bootstrap.png"/>
+        </a>
+        <li class="nav-item text-primary  active ">
+          <a>Home</a>
+        </li>
+        <li class="nav-item text-primary  active ">
+          <a>Link</a>
+        </li>
+      </ul>
+    </nav>
+    <ul class="list-group">
+      <li class="list-group-item">Item I</li>
+      <li class="list-group-item">Item II</li>
+      <li class="list-group-item">Item III</li>
+      <li class="list-group-item">Item IV</li>
+      <li class="list-group-item">Item V</li>
+    </ul>
+    <div class="btn-group gap-1 " role="group" aria-label="buttons">
+      <button type="button" class="btn btn-primary rounded-2">Primary</button>
+      <button type="button" class="btn btn-secondary rounded-2 ">Secondary</button>
+      <button type="button" class="btn btn-success rounded-2">Success</button>
+      <button type="button" class="btn btn-danger rounded-2 ">Danger</button>
+    </div>
   </body>
 </html>
